--- a/EXERCICIOS_4_CLASS.ipynb
+++ b/EXERCICIOS_4_CLASS.ipynb
@@ -109,9 +109,9 @@
     "      print('O email é: ', self.email)\n",
     "      print('O telefone é: ', self.telefone, '\\n')\n",
     "\n",
-    "pes1 = Pessoa('Marcus', 'Sorocaba', '15998428124', 'marcus.camargo@santander.com.br')\n",
+    "pes1 = Pessoa('Marcus', 'Sorocaba', '159984224', 'marcus.camargo@blabla')\n",
     "pes1.getPessoa()\n",
-    "pes1.setPessoa('Amabile', 'Cerqueira', '15998541863', 'amabile.ang@icloud.com')\n",
+    "pes1.setPessoa('Amabile', 'Cerqueira', '159954183', 'amabile.ang@blabla')\n",
     "pes1.getPessoa()\n",
     "pes2 = Pessoa('Livia', 'Sorocaba', '1551515151', 'lviia.sksi@fkffoof.fikfi')\n",
     "pes2.getPessoa()\n"
